fixed donation page payment method dropdown text margin, border color, drowpdown menu alignment for all screen size

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1296,6 +1296,14 @@ img {
   width: 20%;
 }
 
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-\[10\%\] {
+  width: 10%;
+}
+
 .max-w-\[15rem\] {
   max-width: 15rem;
 }
@@ -1701,6 +1709,23 @@ img {
 .border-slate-700 {
   --tw-border-opacity: 1;
   border-color: rgb(51 65 85 / var(--tw-border-opacity));
+}
+
+.border-\[\#cccccc\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(204 204 204 / var(--tw-border-opacity));
+}
+
+.border-\[\#cccccc50\] {
+  border-color: #cccccc50;
+}
+
+.border-\[\#cccccc04\] {
+  border-color: #cccccc04;
+}
+
+.border-\[\#cccccc3b\] {
+  border-color: #cccccc3b;
 }
 
 .bg-slate-800 {
@@ -2151,6 +2176,10 @@ img {
 
 .pt-\[56\.25\%\] {
   padding-top: 56.25%;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
 .text-left {
@@ -4218,6 +4247,22 @@ img {
     margin-left: 0px;
   }
 
+  .lg\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .lg\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .lg\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .lg\:mb-\[15px\] {
+    margin-bottom: 15px;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -4637,6 +4682,26 @@ img {
 
   .xl\:-mt-\[6\.5rem\] {
     margin-top: -6.5rem;
+  }
+
+  .xl\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .xl\:mb-1 {
+    margin-bottom: 0.25rem;
+  }
+
+  .xl\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
+  .xl\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .xl\:mb-5 {
+    margin-bottom: 1.25rem;
   }
 
   .xl\:block {
